vcluster_versioned_docs/version-0.36.0/cli/vcluster_snapshot_get.md
---
title: "vcluster snapshot get --help"
sidebar_label: vcluster snapshot get
---


Get virtual cluster snapshot

## Synopsis

```
vcluster snapshot get [flags]
```

```
##############################################################
################### vcluster snapshot get ####################
##############################################################
Get virtual cluster snapshot.

Example:
# Get snapshot from oci image
vcluster snapshot get my-vcluster oci://ghcr.io/my-user/my-repo:my-tag
# Get snapshot from s3 bucket
vcluster snapshot get my-vcluster s3://my-bucket/my-bucket-key
# Get snapshot from vCluster container filesystem
vcluster snapshot get my-vcluster container:///data/my-local-snapshot.tar.gz
##############################################################
```


## Flags

```
      --azure-resource-group string           Azure resource group where the storage account is located
      --azure-subscription-id string          Azure subscription ID where the storage account is located
      --customer-key-encryption-file string   AWS customer key encryption file used for SSE-C. Mutually exclusive with kms-key-id
  -h, --help                                  help for get
      --kms-key-id string                     AWS KMS key ID that is configured for given S3 bucket. If set, aws-kms SSE will be used
      --server-side-encryption string         AWS Server-Side encryption algorithm
      --snapshot-temp-dir string              Temporary directory for snapshot operations. If set to empty string, the OS default directory for temporary files will be used
      --standalone                            Target the local standalone vCluster on this host
```


## Global and inherited flags

```
      --config string       The vcluster CLI config to use (will be created if it does not exist) (default "~/.vcluster/config.json")
      --context string      The kubernetes config context to use
      --debug               Prints the stack trace if an error occurs
      --log-output string   The log format to use. Can be either plain, raw or json (default "plain")
  -n, --namespace string    The kubernetes namespace to use
  -s, --silent              Run in silent mode and prevents any vcluster log output except panics & fatals
```

